tests/files/type_checker_tests/should_pass/039.cmdr
//Test index lvalues type check
x = [[1,2], [3,4], [5,6]];
x[2] = [5];
