tests/files/type_checker_tests/should_fail/003.cmdr
//Should fail since array has multiple types
x = [1, 3, 2.1, 4];